[EMCRI-617] Fix for UI after Angular upgrade (double edit icon displayed)

--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-application-main-forms/property-damage/property-damage.component.html
@@ -327,11 +327,7 @@
                       (click)="editOtherContactsRow(element, index)"
                     >
                       <img src="/assets/images/edit.svg" height="35" width="35" />
-                      <img
-                        src="/assets/images/edit_onhover.svg"
-                        height="35"
-                        width="35"
-                      />
+                      <!-- 2024-08-26 EMCRI-617 waynezen; UI fixes for Angular upgrade -->
                     </button>&nbsp;
                     <button
                     class="delete-image"
