--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review/review.component.html
@@ -421,11 +421,7 @@
               (click)="navigateToStep(0)"
             >
               <img src="/assets/images/edit.svg" height="35" width="35" />
-              <img
-                src="/assets/images/edit_onhover.svg"
-                height="35"
-                width="35"
-              />
+              <!-- 2024-08-26 EMCRI-617 waynezen; UI fixes for Angular upgrade -->
             </button>
           </div>
         </div>
@@ -608,11 +604,7 @@
               (click)="navigateToStep(0)"
             >
               <img src="/assets/images/edit.svg" height="35" width="35" />
-              <img
-                src="/assets/images/edit_onhover.svg"
-                height="35"
-                width="35"
-              />
+              <!-- 2024-08-26 EMCRI-617 waynezen; UI fixes for Angular upgrade -->
             </button>
           </div>
         </div>
