EMBCDFA-1270 # Angualr update UI issues - Fixed the title on all the dialog modals - Fixed the dialog action buttons on all the dialog modals - Fixed the button widths on modals and application page - Fixed the error modal and delete confirmation modal styling issues

--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -341,6 +341,11 @@ mat-card {
   border-radius: 0px !important;
 }
 
+.dialog-title{
+  text-align: center; 
+  padding-top: 12px;
+}
+
 /* TODO(mdc-migration): The following rule targets internal classes of radio that may no longer apply for the MDC version. */
 .mat-radio-label {
   white-space: normal !important;
