--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-application-alert-dialog/dfa-application-alert.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-application-alert-dialog/dfa-application-alert.component.html
@@ -1,10 +1,10 @@
-<h2 style="text-align: center; padding-top: 12px;"><b>Disaster Financial Assistance (DFA) Eligibility</b></h2>
+<h2 class="dialog-title"><b>Disaster Financial Assistance (DFA) Eligibility</b></h2>
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content?.text"></div>
 </mat-dialog-content>
 
-<mat-dialog-actions style="display: flex; gap:12px;">
+<mat-dialog-actions>
   <div class="col-md-6">
     <button class="button-s button-width" mat-button (click)="cancel()">
       <!--{{ content?.cancelButton }}-->
@@ -12,7 +12,7 @@
     </button>
   </div>
   <div class="col-md-6">
-    <button class="button-p button-width" mat-button (click)="confirm()">
+    <button class="button-p button-width" mat-button (click)="confirm()" style="height:70px">
       <!--{{ content?.confirmButton }}-->
       Yes, I have selected the correct<br/>application type and insurance selection
     </button>
