--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-dashboard-navigation/dfa-confirm-dashboard-navigation.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-dashboard-navigation/dfa-confirm-dashboard-navigation.component.html
@@ -1,4 +1,4 @@
-<h2 style="text-align: center; padding-top: 12px;"><b>DFA Prescreening</b></h2>
+<h2 class="dialog-title"><b>DFA Prescreening</b></h2>
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content.text"></div>
