--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-file-delete-dialog/dfa-file-delete.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-file-delete-dialog/dfa-file-delete.component.html
@@ -1,10 +1,10 @@
-<h2 style="text-align: center; padding-top: 12px;"><b>Delete File Confirmation</b></h2>
+<h2 class="dialog-title"><b>Delete File Confirmation</b></h2>
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content"></div>
 </mat-dialog-content>
 
-<mat-dialog-actions style="display: flex; gap:12px;">
+<mat-dialog-actions>
   <div class="col-md-6">
     <button class="button-s button-width" mat-button (click)="cancel()">
      No, don't delete
