EMCRI-627 and EMCRI-628

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
@@ -5,7 +5,7 @@
       <br />
       <p class="sub-heading align-left" style="font-size: 20px">Review</p>
        <p class="align-left">
-        Please check that your project information is correct before submitting. Missing required fields marked in red.
+        Please check that your claim information is correct before submitting. Missing required fields marked in red.
       </p>
 
       <!-- Claim Details -->
