--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-dashboard/dfa-claim-dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-dashboard/dfa-claim-dashboard.component.html
@@ -14,7 +14,7 @@
     <div class="row">
       <div class="col-md-6 headerText">
         <span class="page-heading">
-          100 Mile Test community
+          {{businessName}}
           </span> <br />
       </div>
       <div class="col-md-6 headerText">
