--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.scss
@@ -11,6 +11,13 @@
     font-size: 30px;
 }
 
+.setViewIcon {
+  color: #003366;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+}
+
 .example-element-row {
   height: 51px !important;
   border: 1px solid;
