EMBCDFA-1274 - Styling issues with buttons on Modal Dialog - Fixed the issues with buttons on DFA prescreening - DFA Eligibility Modal popup screens

--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-eligibility-dialog/dfa-eligibility-dialog.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-eligibility-dialog/dfa-eligibility-dialog.component.html
@@ -4,7 +4,7 @@
   <div class="col-md-12" [innerHTML]="content?.text"></div>
 </mat-dialog-content>
 
-<mat-dialog-actions style="display:flex; gap:12px;">
+<mat-dialog-actions style="display:flex; justify-content:space-around">
   <div class="col-md-5">
     <button class="button-s button-width" mat-button (click)="cancel()">
       {{ content?.cancelButton }}
