--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-dashboard-navigation/dfa-confirm-dashboard-navigation.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-dashboard-navigation/dfa-confirm-dashboard-navigation.component.html
@@ -7,7 +7,7 @@
   </div>
 </mat-dialog-content>
 
-<mat-dialog-actions style="display: flex; gap: 12px;"> 
+<mat-dialog-actions> 
   <div class="col-md-6">
     <button class="button-s button-width" mat-button (click)="cancel()">
      {{content.cancelButton}}
